font fixed for oberlay and text align set to left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,19 +211,14 @@ main.grid-bg{
     flex-direction: column;
     gap: 1em;
     font-size: var(--lg-font-size);
-    font-weight: 600;
-    text-align: center;
+    font-weight: 500;
+    text-align: left;
     color: var(--text-color);
     transition: var(--default-transition);
 }
 
 
 /* active states */
-.overlay .container a:hover,
-.overlay .container a:focus,
-.overlay .container a:active{
-    color: var(--dark-primary-color);
-}
 
 
 /* NAVBAR */
